--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Portfolio</title>
    <link rel="stylesheet" href="style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+   <section class="top-section">
+      <div class="half-width">
+         <h1>Welcome to</h1>
+         <h1><span class="orange">Fasir's</span> World</h1>
    
+         <h3>Mastering Web development</h3>
+   
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat repellendus aut incidunt explicabo nobis neque. Ratione mollitia distinctio cupiditate optio adipisci ullam, est ut quis a consequuntur fugiat minus facere.
+         Explicabo voluptates commodi maiores expedita dignissimos, cumque eum natus accusamus, laborum doloribus fugit. Cum deleniti inventore tempora culpa nesciunt laboriosam explicabo possimus? Error natus, ab deleniti voluptatem alias tenetur dicta?
+         Suscipit optio corporis, debitis saepe, minima distinctio eos consequuntur doloribus quisquam quis iure soluta inventore illum unde reprehenderit a ad accusantium. Eligendi ab ratione veniam expedita reprehenderit consectetur pariatur libero.
+         Sapiente et ex quisquam rerum temporibus at quam enim dolore dicta fuga magni cupiditate iusto, possimus facilis eum repellendus cum illum delectus tenetur maxime ratione? Harum eaque quidem corporis aperiam.
+         Laborum, repellat ipsum quaerat officia optio rem veritatis tenetur quidem non harum. Quam esse ullam enim iure vitae quod maiores molestiae alias tenetur aspernatur magnam, perferendis libero, harum dolorem hic.</p>
+
+         <a href="index.html" target="_blank">Hire Me</a>
+      </div>
+   
+      <div class="half-width">
+         <img src="images/fasir-bg.jpg" alt="fasir">
+      </div>
+   </section>
 </body>
 </html>
