--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
    
       <div class="half-width">
-         <img src="images/fasir-bg.jpg" alt="fasir">
+         <img src="images/fasir's-bg.png" alt="fasir">
       </div>
    </section>
 </body>
