--- a/index.html
+++ b/index.html
@@ -17,17 +17,31 @@
    
          <h3>Mastering Web development</h3>
    
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat repellendus aut incidunt explicabo nobis neque. Ratione mollitia distinctio cupiditate optio adipisci ullam, est ut quis a consequuntur fugiat minus facere.
-         Explicabo voluptates commodi maiores expedita dignissimos, cumque eum natus accusamus, laborum doloribus fugit. Cum deleniti inventore tempora culpa nesciunt laboriosam explicabo possimus? Error natus, ab deleniti voluptatem alias tenetur dicta?
-         Suscipit optio corporis, debitis saepe, minima distinctio eos consequuntur doloribus quisquam quis iure soluta inventore illum unde reprehenderit a ad accusantium. Eligendi ab ratione veniam expedita reprehenderit consectetur pariatur libero.
-         Sapiente et ex quisquam rerum temporibus at quam enim dolore dicta fuga magni cupiditate iusto, possimus facilis eum repellendus cum illum delectus tenetur maxime ratione? Harum eaque quidem corporis aperiam.
-         Laborum, repellat ipsum quaerat officia optio rem veritatis tenetur quidem non harum. Quam esse ullam enim iure vitae quod maiores molestiae alias tenetur aspernatur magnam, perferendis libero, harum dolorem hic.</p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptas explicabo, exercitationem alias nam ipsum culpa ratione autem minus ex odit optio dolor, sunt perspiciatis? Excepturi odio enim aliquid. Veritatis!
+         Iste quo assumenda, non repellendus repellat sapiente nostrum, adipisci aspernatur, tenetur ipsam ut? Quo asperiores blanditiis, cum reiciendis qui esse fuga reprehenderit consequatur tempore minima architecto eligendi totam assumenda officia?
+         Autem culpa fugit aperiam, aliquam sit quis nobis aliquid. Perferendis laudantium ut quidem officia dolores dolorem. Vel, illum assumenda, natus commodi recusandae hic, asperiores adipisci eos quisquam repellendus autem temporibus.</p>
 
          <a href="index.html" target="_blank">Hire Me</a>
       </div>
    
       <div class="half-width">
          <img src="Images/fasir's-bg.png" alt="fasir">
+      </div>
+   </section>
+
+   <section class="mid-section">
+      <div class="half-width">
+         <img src="Images/jhankar2.png" alt="jhankar2">
+      </div>
+      <div class="half-width">
+         <h1>Dream Big</h1>
+         <h3>Become a Web developer</h3>
+
+         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi cupiditate ipsa, ea voluptatum iste quo repellendus aspernatur rerum repudiandae aut perferendis fugiat. Dicta aspernatur consequuntur aliquam eligendi ducimus ad repellendus!
+         Harum dolore exercitationem vero velit, qui consectetur alias! Iure et, nihil repellat illo commodi iusto quaerat dolore animi sequi assumenda sint aut sed error blanditiis dicta vitae voluptate ea voluptatibus?
+         Perspiciatis id labore esse tenetur repellat dicta vitae quasi animi reiciendis iure! Nostrum sit, repellendus reprehenderit ea dicta sunt totam error quo maiores magni omnis sint eius dolore in! Doloremque.</p>
+
+         <a href="index.html" target="_blank">Download Resume</a>
       </div>
    </section>
 </body>
