--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="half-width">
          <img src="Images/jhankar2.png" alt="jhankar2">
       </div>
-      <div class="half-width">
+      <div class="half-width eh">
          <h1>Dream Big</h1>
          <h3>Become a Web developer</h3>
 
