--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
    </section>
 
-   <section class="mid-section">
+   <section class="mid-section-1">
       <div class="half-width">
          <img src="Images/jhankar2.png" alt="jhankar2">
       </div>
@@ -44,5 +44,30 @@
          <a href="index.html" target="_blank">Download Resume</a>
       </div>
    </section>
+
+   <section class="mid-section-2">
+      <h1>Experience</h1>
+      <div class="Experience-area">
+         <div id="full-stack" class="half-width ex">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange">2024 - present | Pro level Develper</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolores impedit facilis earum asperiores harum amet? Soluta facilis delectus nesciunt voluptas exercitationem fuga suscipit, velit libero dolor dignissimos tempora quas.
+            Natus non, voluptatum velit molestias aperiam temporibus sapiente at recusandae, quasi cumque quisquam debitis sunt corporis necessitatibus, nobis sit! Libero vitae natus mollitia sint nisi, hic obcaecati ea dolores ex?</p>
+         </div>
+
+         <div id="junior" class="half-width ex">
+            <h2>Junior Wev Develper</h2>
+            <h3 class="orange">2022 - 2024 | Programming Hero Learner</h3>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi laborum fugit minus eum aut ut odit in enim sint ipsa! Reiciendis, aspernatur laborum ipsam quis ullam veniam consequuntur. Tempore, totam.
+            Culpa possimus facere tenetur optio? Expedita voluptates perspiciatis ut maxime vel, totam quisquam reprehenderit, iste dolor numquam optio a placeat rem sequi soluta est sunt in adipisci et illum dolores.</p>
+         </div>
+      </div>
+   </section>
 </body>
+
+<footer>
+   <p>© Abed Fasir | 2024</p>
+</footer>
 </html>
