--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="Experience-area">
          <div id="full-stack" class="half-width ex">
             <h2>Full Stack Developer</h2>
-            <h3 class="orange">2024 - present | Pro level Develper</h3>
+            <h3 class="orange">2024 - present | Pro level Developer</h3>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolores impedit facilis earum asperiores harum amet? Soluta facilis delectus nesciunt voluptas exercitationem fuga suscipit, velit libero dolor dignissimos tempora quas.
             Natus non, voluptatum velit molestias aperiam temporibus sapiente at recusandae, quasi cumque quisquam debitis sunt corporis necessitatibus, nobis sit! Libero vitae natus mollitia sint nisi, hic obcaecati ea dolores ex?</p>
